# cpf-cnpj-brasil

./: .gitignore  LICENSE  pyproject.toml
examples/: cnpj_validator_usage.py  cpf_validator_usage.py
src/cpf_cnpj_brasil/: __init__.py  cnpj_validator.py  cnpj_validator_gemini.py  cpf_cnpj_brasil.py  cpf_validator.py  cpf_validator_gemini.py  exceptions.py  utils.py
tests/: test_cnpj_validator_gemini.py  test_cpf_validator_gemini.py
